# IndabaX-2026

Automating Data Ingestion Pipelines/: 02_practical_labs.ipynb
Automating Data Pipelines - Indaba 2026/: 01_Tutorial_Guide.md  02_Facilitator_Guide.md  03_Exercises.md  README.md  Workshop_Slide_Deck.md  build_pdf.py  requirements.txt
Building Agentic AI Systems/: .env.example  README.md  pytest.ini  requirements.txt
Building Ethical LLM Assistants/: pyproject.toml
Building Ethical LLM Assistants/backend/: main.py
Building Ethical LLM Assistants/core/: __init__.py  config.py  export.py  guardrailed.py  guardrails.py  knowledge_base.py  logging.py  mocks.py  observability.py  prompts.py  providers.py  rag.py  runner.py
Building Ethical LLM Assistants/llm_assistants_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Building Ethical LLM Assistants/tests/: test_api.py  test_export.py  test_guardrails.py  test_observability.py  test_providers.py  test_rag.py  test_runner.py
Data transformation, manipulation  and preparation in SQL/: Draft_SQL Edit.sql
Ethical Computer Vision/: README.md
Foundations of Data Engineering with Python/: FDE_First_Draft.pptx  Python for Data Engineering.docx  python-for-data-engineering.ipynb
Interpretable Machine Learning/: XAL_Notebook.ipynb
Introduction to SQL and Relational Databases/: README.md
ML In Production - Building an End-to-End ML pipeline/: Telecom_Churn_End_to_End_ML_Pipeline.ipynb
Synthetic Data Generation for Economic Policymaking/: EXPORT_MANIFEST.csv  LICENSE  README.md  (+4 more)
(+42 files in other folders)
